main - fixin error imutable list, ItemProductService